[package]
name = "cabtools"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/nickgal/cabtools/"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11.1"
cab = "0.4.1"
clap = { version = "4.1.6", features = ["derive"] }
derive_more = "0.99.17"
encoding_rs = "0.8.32"
filetime = "0.2.20"
once_cell = "1.17.1"
time = "0.3.20"
